# koushin

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
completions/: _koushin
src/: auth.rs  cli.rs  config.rs  error.rs  main.rs  mal.rs  spinner.rs  xdg.rs
