[package]
name = "koushin"
version = "0.2.4"
repository = "https://github.com/feefs/koushin"
description = "A CLI tool for quickly updating (更新) your currently watching MyAnimeList"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
eyre = "0.6.8"
inquire = "0.6.2"
nanoid = "0.4.0"
open = "5.0.0"
owo-colors = "3.5.0"
phf = { version = "0.11.2", features = ["macros"] }
qstring = "0.7.2"
serde = { version = "1.0.188", features = ["derive"] }
spinners = "4.1.0"
tiny_http = "0.12.0"
toml = "0.7.8"
ureq = { version = "2.7.1", features = ["json"] }

[build-dependencies]
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.1"
