[package]
name = "koushin"
version = "0.2.5"
repository = "https://github.com/feefs/koushin"
description = "A CLI tool for quickly updating (更新) your currently watching MyAnimeList"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
eyre = "0.6.12"
inquire = "0.7.0"
nanoid = "0.4.0"
open = "5.1.0"
phf = { version = "0.11.2", features = ["macros"] }
qstring = "0.7.2"
serde = { version = "1.0.197", features = ["derive"] }
spinners = "4.1.1"
tiny_http = "0.12.0"
toml = "0.8.10"
ureq = { version = "2.9.6", features = ["json"] }
xdg = "2.5.2"

[build-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.1"

[lints.rust]
unused_crate_dependencies = "deny"
[lints.clippy]
cargo = "warn"
pedantic = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
